<resources>
    <string name="app_name">Testing Examples</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="basic_login_testing">Basic login testing</string>
    <string name="unknown_error">Unknown error, try again.</string>
    <string name="navigation">Navigation</string>
    <string name="wrong_email">Wrong email</string>
    <string name="wrong_password">Enter a valid password</string>
    <string name="keys">Keys</string>
    <string name="keyboard">keyboard</string>
    <string name="retrofit">Retrofit</string>
    <string name="view_model">ViewModel</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="friendliness">Friendliness</string>
    <string name="child_friendly">Child friendly</string>
    <string name="dog_friendly">Dog friendly</string>
    <string name="stranger_friendly">Stranger friendly</string>
    <string name="edit_cat">Edit cat</string>
    <string name="add_cat">Add cat</string>
    <string name="wrong_empty">This field is required</string>
    <string name="save">Save</string>
    <string name="room">Room</string>
    <string name="cat_detail">Cat detail</string>
    <string name="cats">Cats</string>
    <string name="time_to_drink">Time to drink water, %1$s</string>
    <string name="work_manager">Work manager</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="set_a_reminder">Set a reminder to drink water every hour</string>
    <string name="has_copyright">Has copyright</string>
    <string name="languages">Languages</string>
    <string name="subjects">Subjects</string>
    <string name="bookshelves">Bookshelves</string>
    <string name="using_local_data">Using local data</string>
    <string name="authors">Authors</string>
    <string name="books">Books</string>
    <string name="book_detail">Book information</string>
    <string name="return_to_collection">Return to my collection</string>
    <string name="swipe_to_delete">Swipe to Delete</string>
    <string name="hilt_data_source">Hilt Data Source</string>
    <string name="hilt_repository">Hilt Repository</string>
    <string name="book_deleted">Book successfully deleted</string>
</resources>