<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cats.fragment.CatDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Bingus" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/friendliness"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <LinearLayout
            android:id="@+id/friendliness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/child_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/child_friendly"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:drawableStartCompat="@drawable/ic_child" />

            <TextView
                android:id="@+id/dog_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/dog_friendly"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:drawableStartCompat="@drawable/ic_dog" />

            <TextView
                android:id="@+id/stranger_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/stranger_friendly"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:drawableStartCompat="@drawable/ic_stranger" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@tools:sample/lorem/random" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit_cat"
        android:src="@drawable/ic_edit"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>