<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_cats.xml"
    app:startDestination="@id/catsFragment">

    <fragment
        android:id="@+id/addCatFragment"
        android:name="com.dnieln7.testing.ui.room.fragment.AddCatFragment"
        android:label="@string/add_cat"
        tools:layout="@layout/fragment_add_cat" />
    <fragment
        android:id="@+id/catsFragment"
        android:name="com.dnieln7.testing.ui.room.fragment.CatsFragment"
        android:label="@string/cats"
        tools:layout="@layout/fragment_cats">
        <action
            android:id="@+id/action_catsFragment_to_catDetailFragment"
            app:destination="@id/catDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_catsFragment_to_addCatFragment"
            app:destination="@id/addCatFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/editCatFragment"
        android:name="com.dnieln7.testing.ui.room.fragment.EditCatFragment"
        android:label="@string/edit_cat"
        tools:layout="@layout/fragment_edit_cat">
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/catDetailFragment"
        android:name="com.dnieln7.testing.ui.room.fragment.CatDetailFragment"
        android:label="@string/cat_detail"
        tools:layout="@layout/fragment_cat_detail">
        <action
            android:id="@+id/action_catDetailFragment_to_editCatFragment"
            app:destination="@id/editCatFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
</navigation>